# civ

./: .gitignore  Cargo.toml  NOTES.md  README.md  build_wasm.sh
.cargo/: config.toml
.github/actions/setup/: action.yml
.github/workflows/: benchmarks.yml
crates/civ_common/: Cargo.toml
crates/civ_common/benches/: world.rs
crates/civ_common/src/: geo.rs  lib.rs  task.rs  utils.rs
crates/civ_common/src/game/: city.rs  mod.rs  server.rs  slice.rs  unit.rs
crates/civ_common/src/game/city/: mod.rs  task.rs
crates/civ_common/src/game/city/production/: mod.rs  product.rs  task.rs  tons.rs
crates/civ_common/src/game/nation/: flag.rs  mod.rs
crates/civ_common/src/game/tasks/client/: mod.rs  settle.rs
crates/civ_common/src/game/tasks/client/city/: mod.rs  production.rs
crates/civ_common/src/network/: client.rs  message.rs  mod.rs
crates/civ_common/src/rules/: mod.rs  std1.rs
crates/civ_common/src/space/: context.rs  mod.rs  window.rs
crates/civ_common/src/task/: city.rs  mod.rs  unit.rs
crates/civ_common/src/world/: item.rs  mod.rs  partial.rs  reader.rs  slice.rs  tile.rs
crates/civ_derive/: Cargo.toml
crates/civ_derive/src/: geo.rs  lib.rs
crates/civ_derive/src/task/: mod.rs
crates/civ_gui/: Cargo.toml  README.md
crates/civ_gui/assets/img/: select.xcf  terrain1.xcf  tiles.xcf  units.xcf
crates/civ_gui/examples/: embedded.rs  embedded_server.rs  map_display.rs  massive.rs
crates/civ_gui/examples/shared/: mod.rs
crates/civ_gui/examples/shared/world/: generator.rs
crates/civ_gui/examples/world/: generator.rs
crates/civ_gui/src/: context.rs  lib.rs  main.rs  state.rs  window.rs
crates/civ_gui/src/assets/: atlas.rs  mod.rs  select.rs  tile.rs  unit.rs
crates/civ_gui/src/atlas/tile/: mod.rs
crates/civ_gui/src/bridge/: connect.rs  join.rs  mod.rs  single.rs  take_place.rs  wasm.rs
crates/civ_gui/src/core/: establishment.rs  ingame.rs  mod.rs  state.rs  window.rs
crates/civ_gui/src/debug/: mod.rs  tile.rs
crates/civ_gui/src/ingame/: input.rs  mod.rs  selected.rs
crates/civ_gui/src/ingame/animation/: mod.rs
crates/civ_gui/src/ingame/input/: info.rs  menu.rs  mod.rs  select.rs
crates/civ_gui/src/ingame/interact/: mod.rs  settle.rs
crates/civ_gui/src/ingame/interact/unit/: info.rs  mod.rs  settle.rs
crates/civ_gui/src/ingame/menu/: city.rs  info.rs  mod.rs  unit.rs
crates/civ_gui/src/ingame/menu/draw/: mod.rs  unit.rs
crates/civ_gui/src/ingame/user/: mod.rs
crates/civ_gui/src/ingame/user/interact/: settle.rs
crates/civ_gui/src/inject/: mod.rs
crates/civ_gui/src/map/: grid.rs  mod.rs  move_.rs  refresh.rs  tile.rs  zoom.rs
crates/civ_gui/src/menu/: despawn.rs  gui.rs  join.rs  manage.rs  mod.rs  root.rs  single.rs  spawn.rs  switch.rs
crates/civ_gui/src/network/: mod.rs
crates/civ_gui/src/user/: mod.rs  preferences.rs
crates/civ_gui/src/utils/: assets.rs  bridge.rs  debug.rs  mod.rs  screen.rs
crates/civ_gui/src/utils/gui/: layout.rs  mod.rs  window.rs
crates/civ_proofing/: Cargo.toml
crates/civ_proofing/src/: client.rs  context.rs  main.rs  utils.rs
crates/civ_server/: Cargo.toml
crates/civ_server/benches/: benchmarks.rs  client.rs  index.rs  snapshot.rs  tasks.rs
crates/civ_server/src/: config.rs  context.rs  effect.rs  lib.rs  main.rs  reflect.rs  request.rs  runner.rs  snapshot.rs  state.rs
crates/civ_server/src/action/: mod.rs  settle.rs
crates/civ_server/src/bridge/: clients.rs  direct.rs  mod.rs  network.rs
crates/civ_server/src/game/: access.rs  city.rs  mod.rs  physics.rs  placer.rs  unit.rs
crates/civ_server/src/game/extractor/: mod.rs
crates/civ_server/src/game/task/: mod.rs  production.rs  settle.rs
crates/civ_server/src/network/: clients.rs  mod.rs
crates/civ_server/src/runner/: client.rs  mod.rs  slice.rs  worker.rs
crates/civ_server/src/state/: clients.rs  flag.rs  index.rs  mod.rs
crates/civ_server/src/task/: city.rs  context.rs  create.rs  effect.rs  mod.rs  settle.rs  snapshot.rs  unit.rs
crates/civ_server/src/task/city/: generator.rs  mod.rs  production.rs
crates/civ_server/src/test/: city.rs  mod.rs  task.rs  unit.rs
crates/civ_server/src/utils/: collection.rs
crates/civ_server/src/world/: mod.rs  reader.rs
crates/civ_tui/: Cargo.toml
crates/civ_tui/src/: context.rs  error.rs  main.rs  runner.rs  state.rs
crates/civ_tui/src/command/: city.rs  errors.rs  establishment.rs  mod.rs  status.rs  unit.rs  window.rs
crates/civ_tui/src/network/: mod.rs
crates/civ_world/: Cargo.toml
crates/civ_world/src/: config.rs  lib.rs  main.rs  world.rs  writer.rs
crates/civ_world/src/generator/: mod.rs  random.rs
crates/civ_wui/: Cargo.toml
crates/civ_wui/assets/img/: tiles.xcf
crates/civ_wui/examples/: map_display.rs
crates/civ_wui/src/: context.rs  lib.rs  main.rs  network.rs  network2.rs  state.rs  window.rs
crates/civ_wui/src/assets/: tile.rs
crates/civ_wui/src/bridge/: connect.rs  join.rs  mod.rs  native.rs  single.rs  take_place.rs
crates/civ_wui/src/core/: establishment.rs  ingame.rs  mod.rs  preferences.rs  window.rs
crates/civ_wui/src/debug/: tile.rs
crates/civ_wui/src/embedded/: mod.rs
crates/civ_wui/src/ingame/: input.rs  mod.rs  slice.rs  tile.rs
crates/civ_wui/src/map/: grid.rs  move_.rs  refresh.rs  tile.rs  zoom.rs
crates/civ_wui/src/menu/: despawn.rs  gui.rs  join.rs  manage.rs  mod.rs  root.rs  single.rs  spawn.rs  state.rs  switch.rs
crates/civ_wui/src/network/: mod.rs  native.rs  wasm.rs
crates/civ_wui/src/user/: mod.rs  preferences.rs
crates/civ_wui/src/utils/: assets.rs  city.rs  cookies.rs  mod.rs  unit.rs
dev/bench/: data.js
wasm/: index.html
wasm/assets/: fonts  img
