[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
env_logger = "0.11.5"
log = "0.4.22"
rayon = "1.10.0"
num_cpus = "1.16"
crossbeam = "0.8.4"
bon = "3.2.0"
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
zmq = "0.10"
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
