[package]
name = "civ_common"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
env_logger.workspace = true
log.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
bon.workspace = true
thiserror.workspace = true
dyn-clone.workspace = true
ron.workspace = true
bincode.workspace = true
strum.workspace = true
strum_macros.workspace = true
glam.workspace = true
derive_more.workspace = true
async-std = "1.13.0"
rustc-hash.workspace = true

[dev-dependencies]
rstest.workspace = true
criterion = "0.5.1"
factori.workspace = true

[[bench]]
name = "world"
harness = false
