[package]
name = "civ_proofing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proofing"
path = "src/main.rs"

[dependencies]
civ_common = { path = "../civ_common" }
clap = { version = "4.5.23", features = ["derive"] }
env_logger.workspace = true
log.workspace = true
crossbeam.workspace = true
thiserror.workspace = true
strum.workspace = true
strum_macros.workspace = true
