[package]
name = "civ_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
civ_common = { path = "../civ_common" }
env_logger.workspace = true
log.workspace = true
rayon.workspace = true
num_cpus.workspace = true
crossbeam.workspace = true
bon.workspace = true
uuid.workspace = true
zmq.workspace = true
bincode.workspace = true
message-io.workspace = true
thiserror.workspace = true
dyn-clone.workspace = true

[dev-dependencies]
rstest.workspace = true
