[package]
name = "civ_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
civ_derive = { path = "../civ_derive", features = ["geo"] }
civ_common = { path = "../civ_common" }
env_logger.workspace = true
log.workspace = true
rayon.workspace = true
num_cpus.workspace = true
crossbeam.workspace = true
bon.workspace = true
uuid.workspace = true
bincode.workspace = true
message-io.workspace = true
thiserror.workspace = true
dyn-clone.workspace = true
ron.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
typetag.workspace = true
clap.workspace = true
derive_more.workspace = true
async-std = "1.13.0"
extfn.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
rstest.workspace = true
criterion = "0.5.1"
factori.workspace = true
pretty_assertions = { version = "1.4.1", features = ["unstable"] }

[[bench]]
name = "tasks"
harness = false

[[bench]]
name = "index"
harness = false

[[bench]]
name = "snapshot"
harness = false

[profile.bench]
lto = true
