[package]
name = "civ_wui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wui"
path = "src/main.rs"

[dependencies]
civ_common = { path = "../civ_common" }
bevy = { version = "0.15.1", features = ["dynamic_linking", "wayland"] }
image = { version = "0.25.5", default-features = false }
rand = "0.8.5"
env_logger.workspace = true
log.workspace = true
bon.workspace = true
uuid.workspace = true
crossbeam.workspace = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
