[package]
name = "civ_wui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wui"
path = "src/main.rs"

[dependencies]
civ_common = { path = "../civ_common" }
bevy = { version = "0.15.1", features = ["dynamic_linking", "wayland"] }
image = { version = "0.25.5", default-features = false }
rand = "0.8.5"
env_logger.workspace = true
log.workspace = true
bon.workspace = true
uuid.workspace = true
crossbeam.workspace = true
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { "version" = "0.3.77", features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "Location",
    "UrlSearchParams",
    "Document",
    "Window",
] }
bincode.workspace = true
bevy_async_task = "0.4.0"
async-wsocket = "0.12.0"
async-std = "1.13.0"
futures = "0.3.31"
bevy_egui = "0.32"
strum.workspace = true
strum_macros.workspace = true
hexx = "0.20"
glam.workspace = true
wasm-cookies = "0.2.1"
thiserror.workspace = true
eval-macro.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
civ_server = { path = "../civ_server" }
message-io.workspace = true
clap.workspace = true
home.workspace = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = []
debug = []
debug_tiles = ["debug"]
